--- a/src/Styles/partials/footer.module.css
+++ b/src/Styles/partials/footer.module.css
@@ -1,5 +1,8 @@
-.row{
-    padding: 64px 0;
+
+.footer{
+   border: none;  
+   padding: 64px 96px;
+   margin: 0;
 
 }
 .slogan p{
@@ -29,7 +32,15 @@
 }
 @media only screen and (width <= 990px)
 {
-    .slogan , .product{
+    .slogan , .footerInfo{
         margin-bottom: 60px;
+    }
+    .footer{
+        padding: 0 32px;
+    }
+    .socials{
+        display: flex;
+        justify-content: space-evenly;
+        width: 100%;
     }
 }
