--- a/Frontend/src/Styles/partials/createSupervisorAccount.module.css
+++ b/Frontend/src/Styles/partials/createSupervisorAccount.module.css
@@ -40,6 +40,21 @@
 .navigationBtn{
     width: 120px;
 }
+.select{
+    color: var(--WHITE);
+    font-size: var(--BodyR);
+    padding: 12px 20px;
+    background-color: var(--DARKGREY);
+    width: 100%;
+    border-radius: 8px;
+    margin: 0 auto;
+}
+
+
+.select:hover{
+    background-color: var(--GREY);
+    color: var(--DARKGREY);
+}
 @media only screen and (max-width:990px){
     
     
