--- a/Frontend/src/Styles/partials/Database/databaseTable.module.css
+++ b/Frontend/src/Styles/partials/Database/databaseTable.module.css
@@ -1,26 +1,18 @@
 
-.FAQ{
-   
-    border: solid 1px var(--GREY);
-    margin: 32px;
-    border-radius: 8px !important;
- 
-}
-.btn{
+.btn {
   padding: 16px;
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
-  font-size: var(--BodyL);
+  font-size: var(--H6);
   color: var(--BLACK);
   border: none;
   width: 100%;
-  background-color: var(--GREY);
+
 }
-.btn div{
-  margin: auto;
-}
+
   table thead th
   {
+    background-color: rebeccapurple;
    padding:  32px 0!important;
    border-top:none ;
    color: var(--DARKGREY);
@@ -55,18 +47,30 @@
     cursor: pointer;
    background-color: rgb(3, 10, 35,0.075);
  }
-.newUniversity{
+.newRecord{
  width: fit-content;
  margin: 16px;
  margin-bottom: 0;
+ float: right;
 }
-
+.name{
+  width: max-content;
+  margin: 16px auto;
+  font-size: var(--H5);
+}
  @media only screen and (max-width:990px){
    table thead th{
      padding:32px  !important;
      width: fit-content;
     }
-
+    .oneTable {
+      padding: 16px 0 !important;
+      margin: 16px 0 !important;
+      width: 100% !important;
+  }
+  .name {
+    font-size: var(--BodyL);
+}
 .database{
  overflow-x: auto;
  max-width: 100%;
