--- a/Frontend/src/Styles/partials/InternshipApplication.js/internshipFormsHeaders.module.css
+++ b/Frontend/src/Styles/partials/InternshipApplication.js/internshipFormsHeaders.module.css
@@ -16,10 +16,18 @@
   justify-content: space-between;
   margin-right: 32px;
   
+  
 } 
 .presenceDiv{
   text-align: center;
   font-size: var(--BodyR);
   margin:  0;
+  
   width: fit-content;
+}
+.controlDiv{
+  display: flex;
+  width: 28%;
+  justify-content: space-between;
+ 
 }
