--- a/Frontend/src/Styles/main/studentPresence.module.css
+++ b/Frontend/src/Styles/main/studentPresence.module.css
@@ -1,23 +1,17 @@
-.page{
-    padding: 0 32px;
-}
 
 .section{
     padding: 64px 0;
-}
-.h2{
-  color: var(--PRIMARY);
-  font-size: var(--H2);
 }
 .results{
   border-radius: 8px;
   width: 50%;
   outline: 1px solid var(--GREY);
-  padding: 16px 32px;
+  padding: 16px  0;
   margin: 0 auto;
   margin-bottom: 32px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
+  
 }
 .results div{
   font-size: var(--BodyR);
@@ -25,28 +19,15 @@
   border-bottom: 1px solid var(--PRIMARY);
   padding: 8px;
   height: fit-content;
+  width: fit-content;
+  margin: 0 auto;
 }
 
-.sortBtn{
-  border: none;
-  background-color: var(--WHITE);
-}
-.category button {
-  width: max-content;
-  margin:0 16px;
-  padding: 12px; 
-  color: var(--BLACK);
-  border: none;
-  background-color: transparent;
-}
-.category button:hover{
-  border-radius: 8px;
-  color: var(--WHITE) ;
-  background-color: var(--DARKBLUE);
-}
 .database{
     border-radius: 8px;
     outline: 1px solid var(--GREY);
+   width: 100%;
+   margin: 0 auto;
 }
 
   table thead th
@@ -57,19 +38,12 @@
     font-size: var(--BodyR);
     text-align: center;
     vertical-align: middle;
+    
+   
 
   }
+
   
- 
-  table tbody td {
-    font-size: var(--BodyR);
-    border-top: 1px solid var(--GREY) !important;
-    padding:8px 8 !important;
-    text-align: center;
-    vertical-align: middle;
-
-
-  }
   
   
   
@@ -81,12 +55,11 @@
   .newResponsible{
     width: fit-content;
     position: sticky;
-    padding: 64px 0;
+   margin-bottom: 32px;
     padding-top: 0;
     left: 90vw;
     bottom: 0;
   }
-  
 
   @media only screen and (max-width:990px){
     table thead th{
@@ -98,11 +71,18 @@
   overflow-x: auto;
   max-width: 100%;
  }
- .h2{
-  font-size: var(--H4);
- }
-.results{
+
+ .results{
   width: 100%;
+  padding: 16px  ; 
+  justify-content: space-between;  
 }
+.results div{
+  text-align: center;
+  padding: 0;
+  width:50%;
+  margin: 0 8px;
+}
+
 
   }
