--- a/Frontend/src/Styles/main/usersDatabase.module.css
+++ b/Frontend/src/Styles/main/usersDatabase.module.css
@@ -1,24 +1,13 @@
-.page{
-    padding: 0 32px;
-}
-
 .section{
     padding: 64px 0;
-}
-
-.h2{
-  color: var(--PRIMARY);
-  font-size: var(--H2);
 }
 .results{
   border-radius: 8px;
   width: 50%;
   outline: 1px solid var(--GREY);
-  padding: 16px  0;
+  padding: 16px 32px;
   margin: 0 auto;
   margin-bottom: 32px;
-  display: flex;
-  justify-content: space-around;
   
 }
 .results div{
@@ -34,10 +23,7 @@
 .database{
     border-radius: 8px;
     outline: 1px solid var(--GREY);
-   width: 75%;
-   margin: 0 auto;
 }
-
   table thead th
    {
     padding:  32px 0!important;
@@ -46,12 +32,19 @@
     font-size: var(--BodyR);
     text-align: center;
     vertical-align: middle;
-    
-   
 
   }
-
   
+ 
+  table tbody td {
+    font-size: var(--BodyR);
+    border-top: 1px solid var(--GREY) !important;
+    padding:8px 8 !important;
+    text-align: center;
+    vertical-align: middle;
+
+
+  }
   
   
   
@@ -63,11 +56,12 @@
   .newResponsible{
     width: fit-content;
     position: sticky;
-   margin-bottom: 32px;
+    padding: 64px 0;
     padding-top: 0;
     left: 90vw;
     bottom: 0;
   }
+
 
   @media only screen and (max-width:990px){
     table thead th{
@@ -79,19 +73,9 @@
   overflow-x: auto;
   max-width: 100%;
  }
- .h2{
-  font-size: var(--H4);
- }
- .results{
+
+.results{
   width: 100%;
-  padding: 16px  ; 
-  justify-content: space-between;  
-}
-.results div{
-  text-align: center;
-  padding: 0;
-  width:50%;
-  margin: 0 8px;
 }
 
 
