--- a/Frontend/src/Styles/partials/button.module.css
+++ b/Frontend/src/Styles/partials/button.module.css
@@ -14,16 +14,27 @@
     justify-content: space-evenly;
     align-items: center;
 }
-.signup{
-    background-color: #646F73;
-    color: var(--WHITE);
-    border:1px solid hsl(196, 7%, 42%) ;
+.signupLight{
+    color:#7987f5;
+    background-color:var(--WHITE) ;
+    border:1px solid #273ff8 ;
 }
-.accountExist{
-    color: #646F73;
+.signupDark{
+    color:var(--WHITE);
+    background-color: #7987f5;
+    border:1px solid #273ff8 ;
+}
+.loginDark{
+    color:var(--WHITE);
+    background-color: #F6914D;
+    border:1px solid #f66b0f ;
+}
+.loginLight{
+    color:#F6914D;
     background-color: var(--WHITE);
-    border:1px solid #646F73 ;
+    border:1px solid #f66b0f ;
 }
+
 .rejectionDark{
     color: var(--WHITE);
     background-color:#db1223 ;
